<resources>
    <string name="app_name">demo</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_acc">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="check_first_name">First name must be not empty</string>
    <string name="check_last_name">Last name must be not empty</string>
    <string name="check_email">Email must be valid</string>
    <string name="check_password">Password must be not empty</string>
    <string name="the_ocean_moon">The Ocean Moon</string>
    <string name="non_stop_8_hour_mixes_of_our">Non-stop 8- hour mixes of our</string>
    <string name="most_popular_sleep_audio">most popular sleep audio</string>
    <string name="start">Start</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="soothing_bedtime_stories_to_help_you_fall">Soothing bedtime stories to help you fall</string>
    <string name="into_a_deep_and_natural_sleep">into a deep and natural sleep</string>
</resources>