<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_container"
    tools:context=".SleepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/text_semi_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:text="@string/sleep_stories"
            android:textColor="@color/gray_50" />

        <TextView
            style="@style/text_regular_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/soothing_bedtime_stories_to_help_you_fall"
            android:textColor="@color/gray_50" />

        <TextView
            style="@style/text_regular_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/into_a_deep_and_natural_sleep"
            android:textColor="@color/gray_50" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorySelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_middle_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_lock" />

                <TextView
                    style="@style/text_semi_bold_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_ocean_moon"
                    android:textColor="@color/light_peach" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/non_stop_8_hour_mixes_of_our"
                    android:textColor="@color/gray_50" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/most_popular_sleep_audio"
                    android:textColor="@color/gray_50" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/text_semi_bold_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_button_start"
                    android:text="@string/start" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListStories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>